# captivity-simulator

./: .gitignore  ASSETS.md  LICENSE  Makefile  README.md  pyproject.toml
config/: default.json  example.local.json
scripts/: audit_open_source.py
src/captivity_simulator/: __init__.py  adapter.py  configuration.py  engine.py  mcp_server.py  projection.py  prompts.py  protocol.py  reference.py  server.py  settings.py  time_utils.py
tests/: test_adapter.py  test_engine.py  test_mcp_server.py  test_server.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  CaptivitySimulator.tsx  api.ts  main.tsx  styles.css  vite-env.d.ts
web/src/assets/: OFL.txt
